[package]
name = "ignors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.2" // https://crates.io/crates/inquire
serde = { version = "1.0", features = ["derive"]}
home = "0.5"
clap = "3.2"
toml = "0.5"
reqwest = "0.11"

