[package]
name = "ignors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.2"
spinners = "4.1"
serde = { version = "1.0", features = ["derive"] }
home = "0.5"
clap = "3.2"
toml = "0.5"
reqwest = "0.11"
tokio = {version = "1", features = ["full"] }
async-recursion = "1"
simple_logger = "4"
log = "0.4"
