[package]
name = "ignors"
version = "0.1.0"
edition = "2021"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
homepage = "https://atareao.es"
readme = "README.md"
description = "A simple tool to create .gitignore file"
repository = "https://github.com/atareao/ignors"
license = "MIT"
license-file = "LICENSE"
rust-version = "1.69"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.6"
spinners = "4.1"
serde = { version = "1.0", features = ["derive"] }
home = "0.5"
toml = "0.7"
reqwest = "0.11"
tokio = {version = "1", features = ["full"] }
async-recursion = "1"
simple_logger = "4"
log = "0.4"
